# Projet

./: Blockchain.java  bloc.java  block.java  test.c
duckduckcoin_c/: CMakeLists.txt
duckduckcoin_c/src/: block.c  block.h  blockchain.c  blockchain.h  main.c  utils.h
duckduckcoin_c/src/json/: json-builder.c  json-builder.h  json.c  json.h
duckduckcoin_c/src/sha256/: sha256.c  utils.c  utils.h
duckduckcoin_java/: BlockAdapter.java  Transaction.java  block.java  blockchain.java
